<resources>
    <string name="app_name">i2~Donate</string>
    <string name="server_client_id">AIzaSyAdOokbh0m1ZOQX7N2rv4Maj3BesLrc28k</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="facebook_app_id">815575865578946</string>
    <string name="fb_login_protocol_scheme">fb815575865578946</string>
    <string name="twitter_API_key">EnzTp5DQICdn3DzJ3rBNAioXL</string>
    <string name="twitter_secret_key">ICASrwkV7PaBNmXHkgLXFBtVH4uGYfbOkFlv9JKGTvw0lyD3Bl</string>
    <string name="ClientId">Ae7-40mniICmqZQEPOxH_ThAXlxE9CzqVapa6pdGWp9HbrELuSeYStvZZJYg3Y95qlxR3DLAtoy-Zbop</string>
    <string name="SecretId">ENiu5b5wLpnLrEWs7YvNZBMrPRQCSSsXp1FeuiID-0yF86aOuEIeayaPzXglCFeN-VxF72mvpJ8YaTxJ</string>
    <string name="login_text">LOGIN</string>
    <string name="login_page_text">Please register for using advanced features.</string>
    <string name="login_text_2">Narrow down search results for complex searches by using the Advanced Search.</string>
    <string name="login_username">Email / Phone Number</string>
    <string name="login_password">Password</string>
    <string name="login_forgot_password">Forgot password?</string>
    <string name="login_or_connect">or connect with</string>
    <string name="login_account">Don\'t have an account?</string>
    <string name="login_register">Register Now</string>
    <string name="login_loading">Loading....</string>
    <string name="register_text">REGISTER</string>
    <string name="register_name">Name*</string>
    <string name="register_email">Email Address*</string>
    <string name="register_business_email">Business email address*</string>
    <string name="register_mobile">Mobile*</string>
    <string name="register_business_mobile">Business phone number*</string>
    <string name="register_address_edittext">Enter your Street address 1*</string>
    <string name="register_address_edittext1">Enter your Street address 2</string>
    <string name="update_mobile">Mobile</string>
    <string name="register_password">Password*</string>
    <string name="register_confirm_password">Confirm password*</string>
    <string name="register_password_hint">Note: Password must be at least 8 characters long and have a combination of letters, numbers and symbols</string>
    <string name="register_gender">Gender</string>
    <string name="register_male">Male</string>
    <string name="register_female">Female</string>
    <string name="register_agree">I agree to i2-Donate\'s</string>
    <string name="register_terms">Terms &amp; Conditions</string>
    <string name="register_already">Already have an account?</string>
    <string name="register_login">Login</string>
    <string name="register_orthers">Other</string>
    <string name="register_yes">Business</string>
    <string name="register_no">Individual</string>
    <string name="register_business_name">Business Name*</string>
    <string name="business_firstname">First Name*</string>
    <string name="business_lastname">Last Name*</string>
    <string name="register_business_name_text">Business Contact person name*</string>
    <string name="register_individual">Register as </string>
    <string name="updated_individual">Registered as </string>
    <string name="update_update">Build Your Profile</string>
    <string name="update_skip">Skip</string>
    <string name="update_btn">Update</string>
    <string name="update_business_selected_data">XXXXXXXX</string>
    <string name="navi_name">I2Donate</string>
    <string name="navi_profile">My Profile</string>
    <string name="browse_better">A better way to give</string>
    <string name="browse_sentence">Do a deed of simple kindness; though its end you may not see, it may reach like widening ripples down a long eternity.</string>
    <string name="browse_writter_name">- Joseph Norrisss</string>
    <string name="browse_united_state">united states</string>
    <string name="browse_international">international \ncharites\n Registered in usa</string>
    <string name="browse_charites">charites</string>
    <string name="browse_register">Registered in usa</string>
    <string name="browse_name">name</string>
    <string name="browse_type">type</string>
    <string name="browse_advance_search">Advanced search</string>
    <string name="international">international charites Reg...</string>
    <string name="myspace_title">Joseph noris\'s space</string>
    <string name="myspace_adapter_item_name">My donations</string>
    <string name="myspace_adapter_item_followers">My followings</string>
    <string name="myspace_adapter_item_likes">my likes</string>
    <string name="united_state_search_hint">Search for city,state</string>
    <string name="united_state_filter">Filter by</string>
    <string name="united_state_name">Name</string>
    <string name="united_state_title_name">Search by Name</string>
    <string name="united_state_type">Type</string>
    <string name="united_state_search">Advanced Search</string>
    <string name="united_state_nonprofit">Nonprofits &amp; Charities near you...</string>
    <string name="united_state_location">Search by city/state</string>
    <string name="united_state_internationlocation">Search by country</string>
    <string name="united_state_search_name">Enter nonprofit/charity name</string>
    <string name="united_state_name_location">Location</string>
    <string name="united_state_adapter_american">American Cancer Socity</string>
    <string name="united_state_adapter_new_york">New York,United States</string>
    <string name="united_state_adapter_like">173 Likes</string>
    <string name="united_state_adapter_following">Follow</string>
    <string name="united_state_adapter_donate">Donate</string>
    <string name="name_search_adapter">search name</string>
    <string name="search_by_type">Search By Type</string>
    <string name="search_sub_type">Sub-types</string>
    <string name="type_education">Arts,culture &amp; Humanites </string>
    <string name="type_evniroment">Education</string>
    <string name="type_reset_button">reset</string>
    <string name="type_apply_button">apply</string>
    <string name="type_environment">Environment</string>
    <string name="type_animal">Animal-related</string>
    <string name="type_health">Health care</string>
    <string name="type_diseases">Diseases &amp; Medical Disciplines</string>
    <string name="type_crime">crime &amp; legal-related</string>
    <string name="type_housing">housing &amp; shelter</string>
    <string name="type_civil_rights">Civil rights,social action &amp; Advocacy</string>
    <string name="type_social">social science</string>
    <string name="type_mutual">Mutual &amp; Membership benef</string>
    <string name="following_nonproft">Following non-profits, charities</string>
    <string name="notification_page">Notifications</string>
    <string name="notification_sentence">American Cancer Soceity,Inc.special event"Making Strides of Greater New Haven"Starts on Nov 11,2018</string>
    <string name="setting_text">my settings</string>
    <string name="setting_app">App Settings</string>
    <string name="setting_alloe">All notifications</string>
    <string name="setting_not_distrub">Do not distrub</string>
    <string name="setting_make_sound">Disable sound &amp; vibrate</string>
    <string name="setting_account_setting">Account Settings</string>
    <string name="setting_account_setting_available">(Available only for in-app registration)</string>
    <string name="setting_change_password">Change Password</string>
    <string name="united_sted_details_text">American Cancer Soceity,Inc.special event"Making Strides of Greater New Haven"Starts on Nov 11,2018
    American Cancer Soceity,Inc.special event"Making Strides of Greater New Haven"Starts on Nov 11,2018
    American Cancer Soceity,Inc.special event"Making Strides of Greater New Haven"Starts on Nov 11,2018</string>
    <string name="united_state_leadreship">Leadership &amp;\n Team</string>
    <string name="united_state_values">Values</string>
    <string name="united_state_impact">Impact</string>
    <string name="united_state_contact">Contact</string>
    <string name="welcome_better_to_give">A Better Way to give</string>
    <string name="welcome_all_in_one">All - in - One</string>
    <string name="welcome_giving">giving</string>
    <string name="welcome_we_want">we want to make giving simple</string>
    <string name="welcome_meaningful">and meaningful for you.the</string>
    <string name="welcome_possibilities">possibilities are endless!</string>
    <string name="welcome_smarter">Giving</string>
    <string name="welcome_objective">We want to make giving simple </string>
    <string name="welcome_charities">and meaningful for you. The </string>
    <string name="welcome_support">possibilities are endless!</string>
    <string name="welcome_bypass">Bypass this message permanently</string>
    <string name="name_search_noresult">No data found...</string>
    <string name="advanced_search">advanced search</string>
    <string name="advanced_narrow">Narrow down search results for complex searches by using the Advanced Search.</string>
    <string name="advanced_tax">Tax Status</string>
    <string name="advanced_exempt">Deductible</string>
    <string name="advanced_not_exempt">Not Deductible</string>
    <string name="advanced_sub_types">Types</string>
    <string name="advance_year_in">Annual Revenue</string>
    <string name="search_arts">Arts,Culture &amp; Humanities</string>
    <string name="serach_education">Education</string>
    <string name="search_environment">Environment</string>
    <string name="search_animalrelated">Animal-Related</string>
    <string name="search_healthcare">Health Care</string>
    <string name="search_diseases">Diseases,Disorders,&amp;Medical Disciplines</string>
    <string name="search_crime">Crime &amp; Legal-Related</string>
    <string name="search_housing">Housing &amp; Shelter</string>
    <string name="search_civil_rights">Civil Rights,Social Action &amp;Advocacy</string>
    <string name="search_socialscience">Social Science</string>
    <string name="search_mutual">Mutual &amp; Membership Benef</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_advance_search">Filter the Non-profits by types and sub types</string>
    <string name="payment_donate_money">Donate Money</string>
    <string name="donation_calculation">Donation Calculation</string>
    <string name="donation_amt">Donation amount</string>
    <string name="donation_merchant_charges">Merchant charges \n (2.9%+$0.30)</string>
    <string name="donation_processing_fee">Processing Fee (1%)</string>
    <string name="donation_total_amt">Total amount</string>
    <string name="donation_close">Close</string>
    <string name="payment_cancel">Cancel</string>
    <string name="payment_enter">Enter Amount</string>
    <string name="payment_continue">Continue</string>
    <string name="autocomplete_hint">Enter city/state</string>
    <string name="terms_title">Terms &amp; Conditions</string>
    <string name="help_support">HELP &amp; SUPPORT</string>
    <string name="help_Lorem">Lorem ipsum dolor sit amet?</string>
    <string name="help_Consectetur">Consectetur adipiscing elit. Phasellus eget nibh vehicula dui vehicula mattis in vitae ipsum. Etiam in velit vitae leo sollicitudin ultricies nec iaculis est.</string>
    <string name="help_amet">Lorem ipsum dolor sit amet?</string>
    <string name="help_adipiscing">Consectetur adipiscing elit. Phasellus eget nibh vehicula dui vehicula mattis in vitae ipsum. Etiam in velit vitae leo sollicitudin ultricies nec iaculis est.</string>
    <string name="thanks_text">Thanks for registering with us</string>
    <string name="review_text">we are you reviewing your registration details \n      and we will email you on the status</string>
    <string name="ok">ok</string>
</resources>