<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:gravity="center_horizontal"
    android:background="@drawable/splash_background"
    tools:context=".Activity.WelcomeActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <ImageView
            android:layout_width="@dimen/_130sdp"
            android:layout_height="@dimen/_70sdp"
            android:src="@drawable/idonate_logo"
            android:layout_marginTop="@dimen/_50sdp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/welcome_better_tv"
            android:textColor="@color/colorAccent"
            android:fontFamily="@font/commercialscriptbt"
            android:textSize="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/welcome_better_to_give"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:text="@string/welcome_all_in_one"/>
        <ImageView
            android:layout_width="@dimen/_140sdp"
            android:layout_height="@dimen/_140sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:src="@drawable/charity_icon"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_giving"
            android:layout_marginTop="@dimen/_10sdp"
            android:textAllCaps="true"
            android:id="@+id/giving_tv"
            android:textColor="@color/colorPrimary"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="@dimen/_35sdp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_we_want"
            android:layout_marginTop="@dimen/_10sdp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_meaningful"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_possibilities"/>
    </LinearLayout>
</RelativeLayout>