<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:gravity="center_horizontal"
    android:background="@drawable/splash_background"
    tools:context=".Activity.WelcomeActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_40sdp"
            android:fontFamily="@font/snellroundhandboldscript"
            android:text="@string/welcome_all_in_one"/>
        <ImageView
            android:layout_width="@dimen/_250sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:src="@drawable/splashlogo"/>



        <ImageView
            android:layout_width="@dimen/_140sdp"
            android:layout_height="@dimen/_140sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:visibility="gone"
            android:src="@drawable/finance_icon"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_smarter"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="@color/colorPrimary"
            android:id="@+id/smarter_tv"
            android:fontFamily="@font/snellroundhandboldscript"
            android:textSize="@dimen/_70sdp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/welcome_objective"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
           android:textSize="@dimen/_18sdp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:textSize="@dimen/_18sdp"
            android:text="@string/welcome_charities"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/_18sdp"
            android:textColor="@color/colorAccent"
            android:text="@string/welcome_support"/>
    </LinearLayout>
</RelativeLayout>