<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popup_element_course_plan_course"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent_color2"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="25dp"
        android:background="@drawable/register_dialog"
        android:gravity="center|top"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/thanks_text"
            android:layout_marginTop="@dimen/_55sdp"
            android:textSize="@dimen/_13sdp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_height="wrap_content">
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/review_text"
            android:layout_marginTop="@dimen/_5sdp"
            android:gravity="center"
            android:textSize="@dimen/_10sdp"
            android:layout_height="wrap_content">
        </TextView>

        <Button
            android:id="@+id/ok"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_13sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:background="@drawable/login_botton_border"
            android:text="@string/ok"
            android:textColor="@color/title_color" />

    </LinearLayout>

</LinearLayout>


