<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dashbord_background"
    tools:context=".Activity.AdvanceSearch1Activity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/commonMenuActivityToolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:contentInsetStart="0dp"
        android:contentInsetLeft="0dp"
        android:contentInsetEnd="0dp"
        android:contentInsetRight="0dp"
        android:elevation="5dp"
        app:contentInsetEnd="0dp"
        app:contentInsetStart="0dp">

        <ImageView
            android:id="@+id/back_icon_login_img"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="start|left"
            android:padding="8dp"
            android:src="@drawable/back_icon" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_centerVertical="true"
            android:src="@drawable/idonate_logo" />
    </androidx.appcompat.widget.Toolbar>
  <!--  <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_below="@+id/commonMenuActivityToolbar"
        android:layout_height="match_parent"
        android:scrollbars="none"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:fillViewport="true">-->
   <!-- <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
     >-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/commonMenuActivityToolbar"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/advanced_search"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/advanced_narrow"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/advanced_tax"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/advanced_exempt"
                android:textAllCaps="true"
                android:background="@drawable/advanced_border_layout"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/advanced_not_exempt"
                android:textAllCaps="true"
                android:background="@drawable/advanced_border_layout"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/advanced_sub_types"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />



            <ExpandableListView

                android:id="@+id/expandible_listview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_10sdp"
                android:clipToPadding="false"
                android:visibility="gone"
                android:divider="@null"
                android:dividerHeight="0dp"
                android:screenReaderFocusable="false"
                android:groupIndicator="@null"
                android:indicatorRight="@null"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/advance_year_in"
            android:visibility="gone"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Coming Soon......"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/colorPrimary"/>


    </LinearLayout>
  <!--  </android.support.v4.widget.NestedScrollView>-->
</RelativeLayout>